fix(PageError): update button styles + add gap between title and button

--- a/src/widgets/PageError/ui/PageError.module.scss
+++ b/src/widgets/PageError/ui/PageError.module.scss
@@ -4,4 +4,8 @@
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
+
+	&-title {
+		margin-bottom: var(--spacer-md);
+	}
 }
